force-app/main/default/objects/ccrz__E_HtmlCache__c/ccrz__E_HtmlCache__c.object-meta.xml
<CustomObject>
    <description>Stores the Category tree as HTML to be displayed in the catalog. This is populated by clicking the Menu Cache button on the CC Admin tab.</description>
    <label>CC Html Cache</label>
    <nameField>
        <label>Html Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Html Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>