force-app/main/default/objects/ccrz__E_HtmlCache__c/fields/ccrz__DirtyFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DirtyFlag__c</fullName>
    <label>Dirty Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>