force-app/main/default/objects/ccrz__E_HtmlCache__c/fields/ccrz__HtmlType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__HtmlType__c</fullName>
    <description>Specifies which type of HTML this is for</description>
    <label>HTML Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category Tree</fullName>
            </value>
            <value>
                <fullName>Top Menu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>