force-app/main/default/objects/ccrz__E_HtmlCache__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <label>Locale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>