force-app/main/default/objects/ccrz__E_HtmlCache__c/fields/ccrz__MenuHtml__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MenuHtml__c</fullName>
    <label>Menu Html</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>