force-app/main/default/objects/ccrz__E_HtmlCache__c/fields/ccrz__OverflowMenuHtml__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OverflowMenuHtml__c</fullName>
    <label>Overflow Menu Html</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>