force-app/main/default/objects/ccrz__E_HtmlCache__c/fields/ccrz__OverflowTreeHtml__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OverflowTreeHtml__c</fullName>
    <label>Overflow Tree Html</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>