force-app/main/default/objects/ccrz__E_HtmlCache__c/fields/ccrz__StoreID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StoreID__c</fullName>
    <label>Store ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>