force-app/main/default/objects/ccrz__E_HtmlCache__c/fields/ccrz__TopLevelCategoryHtml__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TopLevelCategoryHtml__c</fullName>
    <label>Top Level Category Html</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>