force-app/main/default/objects/ccrz__E_HtmlCache__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__StoreID__c</columns>
    <columns>ccrz__Locale__c</columns>
    <columns>ccrz__DirtyFlag__c</columns>
    <columns>ccrz__HtmlType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>