force-app/main/default/objects/ccrz__E_HtmlCache__c/listViews/ccrz__DefaultStore.listView-meta.xml
<ListView>
    <fullName>ccrz__DefaultStore</fullName>
    <columns>NAME</columns>
    <columns>ccrz__HtmlType__c</columns>
    <columns>ccrz__Locale__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__StoreID__c</field>
        <operation>equals</operation>
        <value>DefaultStore</value>
    </filters>
    <label>DefaultStore</label>
    <language>en_US</language>
</ListView>